feat: Adiciona mapeadores e DTOs para beneficiários, dentistas e endereços, refatorando a estrutura de dados